runtime/pavex_macros/tests/from_request/fail/missing_deser_impl.rs
use pavex_macros::FromRequest;

#[derive(FromRequest)]
pub struct MyStruct {
    #[query_param]
    a: NotDeserializable,
}

pub struct NotDeserializable;

fn main() {}
